fixed grid layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
 }
 
 .Task-grid {
-background-color: aquamarine;
+grid-row: 1 / span 3;
+grid-column: 2;
+
 }
 
